# json-corrector

./: Cargo.toml  README.md
data/: test1.json
src/: chunker.rs  main.rs
